--- a/ImanHangfireSample/Views/Shared/_Layout.cshtml
+++ b/ImanHangfireSample/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Continuation">Continuation</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EmailSender" asp-action="Index">Send Email</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
