--- a/ImanHangfireSample/Views/EmailSender/Detail.cshtml
+++ b/ImanHangfireSample/Views/EmailSender/Detail.cshtml
@@ -48,7 +48,30 @@
         </dd>
     </dl>
 </div>
+<div class="progress">
+    <div id="theprogressbar-@Model.Id" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+<div class="form-group">
+    <label for="sendmaillogs">logs</label>
+    <textarea style="background-color:black; color:yellow;" disabled class="form-control" id="sendmaillogs" rows="7"></textarea>
+
+</div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
 </div>
+
+@section Scripts
+    {
+    <script src="~/js/signalr/dist/browser/signalr.js"></script>
+    <script src="~/js/Tracking.js"></script>
+
+    <script>
+        $(document).ready(function(){
+            console.log("ready!");
+            setTimeout(function(){
+                connectToGroup('@Model.Id');
+            },1000);
+        });
+    </script>
+    }
